# fft_comparator_CPU-GPU

./: CMakeLists.txt  CMakeLists_lin.txt  README.md
include/: fft_cpu.hpp  fft_gpu.hpp  wav_signal.hpp
src/: fft_cpu.cpp  fft_gpu.cu  main.cpp  wav_signal.cpp
